--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -3,18 +3,18 @@ Type: Package
 Title: Single Site Analysis (SSA)
 Version: 0.0.0.9000
 Date: 2019-05-02
-Authors@R: c(
-    person("Bart-Jan", "van Rossum", email = "bart-jan.vanrossum@wur.nl", 
+Authors@R: c(person("Bart-Jan", "van Rossum", email = "bart-jan.vanrossum@wur.nl", 
     role = c("aut", "cre")),
     person("Biometris", rol = "cph"))
-Description: The R Analytical Pipeline (RAP), commissioned by the Generation 
-    Challenge Program (GCP), is being developed to streamline the analysis of 
-    typical plant breeding experiments, including both phenotypic analysis of 
-    field trials and genotype-by-environment analysis. Some functions have
-    been created to be used in conjunction with the R package 'asreml' for 
-    the 'ASReml' software, which can be obtained upon purchase from 'VSN' 
-    international (<http://www.vsni.co.uk/software/asreml>).
-License: GPL-3
+Description: The statgen packages, commissioned by the Generation Challenge 
+    Program (GCP), are being developed to streamline the analysis of typical 
+    plant breeding experiments, including both phenotypic analysis of field 
+    trials and genotype-by-environment analysis. statgenSSA can be used for 
+    phenotypic analysis of field trials using spatial models.
+    Some functions have been created to be used in conjunction with the R 
+    package 'asreml' for the 'ASReml' software, which can be obtained upon 
+    purchase from 'VSN' international (<http://www.vsni.co.uk/software/asreml>).
+License: GPL
 Encoding: UTF-8
 LazyData: true
 RoxygenNote: 6.1.1
