--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -95,6 +95,6 @@ coverage:
   before_script:
     - echo 'R_LIBS_USER='$R_LIBS_USER > .Renviron
   script:
-    - Rscript -e 'covr::package_coverage(line_exclusions = "fitTDAsreml.R"); covr::gitlab(line_exclusions = "R/fitTDAsreml.R")'
+    - Rscript -e 'covr::package_coverage(line_exclusions = "fitTDAsreml.R")'
   coverage: '/Coverage:\s*(\d+.\d+\%)/'
 
