--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -8,23 +8,25 @@ variables:
   R_LIBS_USER: "$CI_PROJECT_DIR/ci/lib"
 
 before_script:
-  ## cache apt.
+  ## Cache apt.
   - export APT_DIR=$CI_PROJECT_DIR/.apt && export APT_STATE_LISTS=$APT_DIR/lists && export APT_CACHE_ARCHIVES=$APT_DIR/archives
   - printf "dir::state::lists    ${APT_STATE_LISTS};\ndir::cache::archives    ${APT_CACHE_ARCHIVES};\n" > /etc/apt/apt.conf
   - mkdir -p "${APT_STATE_LISTS}/partial" && mkdir -p "${APT_CACHE_ARCHIVES}/partial"
-  ## install apt dependencies for packages.
+  ## Install apt dependencies for packages.
   - apt-get update -qq
   - apt-get update && apt-get install -y libxml2-dev libssl-dev libcurl4-openssl-dev zlib1g-dev libglu1-mesa-dev libfreetype6-dev > /dev/null
+  ## Install qpdf - needed for checking vignettes.
   - apt-get update && apt-get install -y --no-install-recommends qpdf ghostscript > /dev/null
-  ## install pandoc - needed for checking readme.
-  - apt-get update && apt-get install -y pandoc > /dev/null
-  ## cache R packages.
+  ## Install pandoc - needed for checking readme.
+  - apt-get update && apt-get install -y pandoc pandoc-citeproc > /dev/null
+  ## Create directory for caching R packages.
   - mkdir -p $R_LIBS_USER
-  - echo 'R_LIBS_USER='$R_LIBS_USER > .Renviron
-  ## set GITLAB_PAT.
-  - echo 'GITLAB_PAT='$GITLAB_PAT >> .Renviron
+  ## Add R_LIBS_USER to libpaths.
+  - echo '.libPaths("'${R_LIBS_USER}'")' > .Rprofile
   ## Set _R_CHECK_FORCE_SUGGESTS_ to FALSE so R check doesn't crash over asreml.
-  - echo '_R_CHECK_FORCE_SUGGESTS_="false"' >> .Renviron
+  - echo '_R_CHECK_FORCE_SUGGESTS_="false"' > .Renviron
+    ## set GITLAB_PAT.
+  - echo 'GITLAB_PAT='$GITLAB_PAT >> .Renviron
 
 R-release:
   stage: build
@@ -32,14 +34,11 @@ R-release:
   script:
     - Rscript -e 'sessionInfo()'
     ## Install missing and outdated packages.
-    - Rscript -e 'source(".gitlab-ci.R"); pkgsUpdate(repos = "https://cran.rstudio.com", quiet = TRUE, instPkgdown = FALSE)'
-    ## Remove vignettes folder and get VignetteBuilder field out of DESCRIPTION file.
-    - rm -rf vignettes
-    - Rscript -e 'd <- read.dcf("DESCRIPTION"); d[, colnames(d) == "VignetteBuilder"] <- NA; write.dcf(d, "DESCRIPTION")'
-    # Build package.
-    - R CMD build . --no-build-vignettes --no-manual
+    - Rscript -e 'source(".gitlab-ci.R"); pkgsUpdate(quiet = TRUE, instPkgdown = FALSE)'
+    ## Build package.
+    - R CMD build . --no-manual
     - PKG_FILE_NAME=$(ls -1t *.tar.gz | head -n 1)
-    - R CMD check "${PKG_FILE_NAME}" --no-build-vignettes --no-manual --as-cran
+    - R CMD check "${PKG_FILE_NAME}" --no-manual --as-cran
   artifacts:
     when: always
     paths:
@@ -58,14 +57,11 @@ R-devel:
   script:
     - Rscriptdevel -e 'sessionInfo()'
     ## Install missing and outdated packages.
-    - Rscriptdevel -e 'source(".gitlab-ci.R"); pkgsUpdate(repos = "https://cran.rstudio.com", quiet = TRUE, instPkgdown = FALSE)'
-    ## Remove vignettes folder and get VignetteBuilder field out of DESCRIPTION file.
-    - rm -rf vignettes
-    - Rscriptdevel -e 'd <- read.dcf("DESCRIPTION"); d[, colnames(d) == "VignetteBuilder"] <- NA; write.dcf(d, "DESCRIPTION")'
+    - Rscriptdevel -e 'source(".gitlab-ci.R"); pkgsUpdate(quiet = TRUE, instPkgdown = FALSE)'
     ## Build package.
-    - Rdevel CMD build . --no-build-vignettes --no-manual
+    - Rdevel CMD build . --no-manual
     - PKG_FILE_NAME=$(ls -1t *.tar.gz | head -n 1)
-    - Rdevel CMD check "${PKG_FILE_NAME}" --no-build-vignettes --no-manual --as-cran
+    - Rdevel CMD check "${PKG_FILE_NAME}" --no-manual --as-cran
   artifacts:
     when: always
     paths:
@@ -93,8 +89,8 @@ coverage:
     - develop
     - master
   before_script:
-    - echo 'R_LIBS_USER='$R_LIBS_USER > .Renviron
+    ## Add R_LIBS_USER to libpaths.
+    - echo '.libPaths("'${R_LIBS_USER}'")' > .Rprofile
   script:
-    - Rscript -e 'covr::package_coverage(line_exclusions = "fitTDAsreml.R")'
+    - Rscript -e 'covr::package_coverage()'
   coverage: '/Coverage:\s*(\d+.\d+\%)/'
-
