--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -92,5 +92,5 @@ coverage:
     ## Add R_LIBS_USER to libpaths.
     - echo '.libPaths("'${R_LIBS_USER}'")' > .Rprofile
   script:
-    - Rscript -e 'covr::package_coverage()'
+    - Rscript -e 'covr::package_coverage(line_exclusions = "fitTDAsreml.R")'
   coverage: '/Coverage:\s*(\d+.\d+\%)/'
