--- a/NAMESPACE
+++ b/NAMESPACE
@@ -18,6 +18,7 @@ export(getMeta)
 export(outlierSSA)
 export(report)
 export(setMeta)
+import(ggplot2)
 import(stats)
 importFrom(SpATS,predict.SpATS)
 importFrom(grDevices,topo.colors)
