--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -14,7 +14,7 @@ before_script:
   - mkdir -p "${APT_STATE_LISTS}/partial" && mkdir -p "${APT_CACHE_ARCHIVES}/partial"
   ## Install apt dependencies for packages.
   - apt-get update -qq
-  - apt-get update && apt-get install -y libxml2-dev libssl-dev libcurl4-openssl-dev zlib1g-dev libglu1-mesa-dev libfreetype6-dev > /dev/null
+  - apt-get update && apt-get install -y libxml2-dev libssl-dev libcurl4-openssl-dev zlib1g-dev libglu1-mesa-dev libfreetype6-dev netbase > /dev/null
   ## Install qpdf - needed for checking vignettes.
   - apt-get update && apt-get install -y --no-install-recommends qpdf ghostscript > /dev/null
   ## Install pandoc - needed for checking readme.
