Added option spaTrend for plotting spatial trend as pcts (#6)

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -22,6 +22,7 @@ export(setMeta)
 import(ggplot2)
 import(stats)
 importFrom(SpATS,predict.SpATS)
+importFrom(grDevices,colorRampPalette)
 importFrom(grDevices,topo.colors)
 importFrom(graphics,plot)
 importFrom(utils,capture.output)
