--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -2,31 +2,16 @@ stages:
   - build
   - test
 
-image: rocker/r-ver
+image: docker-registry.wur.nl/rossu027/r-verasreml:latest
 
 variables:
   R_LIBS_USER: "$CI_PROJECT_DIR/ci/lib"
 
 before_script:
-  ## Cache apt.
-  - export APT_DIR=$CI_PROJECT_DIR/.apt && export APT_STATE_LISTS=$APT_DIR/lists && export APT_CACHE_ARCHIVES=$APT_DIR/archives
-  - printf "dir::state::lists    ${APT_STATE_LISTS};\ndir::cache::archives    ${APT_CACHE_ARCHIVES};\n" > /etc/apt/apt.conf
-  - mkdir -p "${APT_STATE_LISTS}/partial" && mkdir -p "${APT_CACHE_ARCHIVES}/partial"
-  ## Install apt dependencies for packages.
-  - apt-get update -qq
-  - apt-get update && apt-get install -y libxml2-dev libssl-dev libcurl4-openssl-dev zlib1g-dev libglu1-mesa-dev libfreetype6-dev netbase > /dev/null
-  ## Install qpdf - needed for checking vignettes.
-  - apt-get update && apt-get install -y --no-install-recommends qpdf ghostscript > /dev/null
-  ## Install pandoc - needed for checking readme.
-  - apt-get update && apt-get install -y pandoc pandoc-citeproc > /dev/null
-  ## Create directory for caching R packages.
-  - mkdir -p $R_LIBS_USER
   ## Add R_LIBS_USER to libpaths.
   - echo '.libPaths("'${R_LIBS_USER}'")' > .Rprofile
-  ## Set _R_CHECK_FORCE_SUGGESTS_ to FALSE so R check doesn't crash over asreml.
-  - echo '_R_CHECK_FORCE_SUGGESTS_="false"' > .Renviron
-    ## set GITLAB_PAT.
-  - echo 'GITLAB_PAT='$GITLAB_PAT >> .Renviron
+  ## set GITLAB_PAT.
+  - echo 'GITLAB_PAT='$GITLAB_PAT > .Renviron
 
 R-release:
   stage: build
@@ -34,7 +19,7 @@ R-release:
   script:
     - Rscript -e 'sessionInfo()'
     ## Install missing and outdated packages.
-    - Rscript -e 'source(".gitlab-ci.R"); pkgsUpdate(quiet = TRUE, instPkgdown = FALSE)'
+    - Rscript -e 'source(".gitlab-ci.R"); pkgsUpdate()'
     ## Build package.
     - R CMD build . --no-manual
     - PKG_FILE_NAME=$(ls -1t *.tar.gz | head -n 1)
@@ -48,16 +33,15 @@ R-release:
     key: release-cache
     paths:
       - $R_LIBS_USER
-      - $CI_PROJECT_DIR/.apt
 
 R-devel:
   stage: build
-  image: rocker/r-devel
+  image: docker-registry.wur.nl/rossu027/r-develasreml:latest
   allow_failure: true
   script:
     - Rscriptdevel -e 'sessionInfo()'
     ## Install missing and outdated packages.
-    - Rscriptdevel -e 'source(".gitlab-ci.R"); pkgsUpdate(quiet = TRUE, instPkgdown = FALSE)'
+    - Rscriptdevel -e 'source(".gitlab-ci.R"); pkgsUpdate()'
     ## Build package.
     - Rdevel CMD build . --no-manual
     - PKG_FILE_NAME=$(ls -1t *.tar.gz | head -n 1)
@@ -71,7 +55,6 @@ R-devel:
     key: devel-cache
     paths:
       - $R_LIBS_USER
-      - $CI_PROJECT_DIR/.apt
 
 coverage:
   stage: test
@@ -83,7 +66,6 @@ coverage:
     key: release-cache
     paths:
       - $R_LIBS_USER
-      - $CI_PROJECT_DIR/.apt
     policy: pull
   only:
     - develop
@@ -93,4 +75,5 @@ coverage:
     - echo '.libPaths("'${R_LIBS_USER}'")' > .Rprofile
   script:
     - Rscript -e 'covr::package_coverage(line_exclusions = "R/fitTDAsreml.R", function_exclusions = c("extractAsreml", "createReport"))'
+    - Rscript -e 'covr::gitlab()'
   coverage: '/Coverage:\s*(\d+.\d+\%)/'
