--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -30,7 +30,7 @@ Description: The statgen packages, commissioned by the Generation Challenge
     phenotypic analysis of field trials using spatial models.
     Some functions have been created to be used in conjunction with the R 
     package 'asreml' for the 'ASReml' software, which can be obtained upon 
-    purchase from 'VSN' international (<http://www.vsni.co.uk/software/asreml>).
+    purchase from 'VSN' international (<http://www.vsni.co.uk/software/asreml-r>).
 License: GPL
 Encoding: UTF-8
 LazyData: true
