--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -1,5 +1,6 @@
 stages:
   - build
+  - test
 
 image: docker-registry.wur.nl/rossu027/r-verasreml:latest
 
@@ -7,17 +8,39 @@ variables:
   R_LIBS_USER: "$CI_PROJECT_DIR/ci/lib"
 
 before_script:
-  - mkdir -p $R_LIBS_USER
   ## Add R_LIBS_USER to libpaths.
+  - mkdir -p $R_LIBS_USER
   - echo '.libPaths("'${R_LIBS_USER}'")' > .Rprofile
   ## set GITLAB_PAT.
   - echo 'GITLAB_PAT='$GITLAB_PAT > .Renviron
+
+R-release:
+  stage: build
+  allow_failure: false
+  script:
+    - Rscript -e 'sessionInfo()'
+    ## Install missing and outdated packages.
+    - Rscript -e 'source(".gitlab-ci.R"); pkgsUpdate()'
+    ## Build package.
+    - R CMD build . --no-manual
+    - PKG_FILE_NAME=$(ls -1t *.tar.gz | head -n 1)
+    - R CMD check "${PKG_FILE_NAME}" --no-manual --as-cran
+  artifacts:
+    when: always
+    paths:
+      - '*.Rcheck/*'
+    expire_in: '1 month'
+  cache:
+    key: release-cache
+    paths:
+      - $R_LIBS_USER
 
 R-devel:
   stage: build
   image: docker-registry.wur.nl/rossu027/r-develasreml:latest
   allow_failure: true
   script:
+    ## Debugging information.
     - Rscriptdevel -e 'sessionInfo()'
     - Rscriptdevel -e '.libPaths()'
     ## Install missing and outdated packages.
@@ -36,4 +59,28 @@ R-devel:
     paths:
       - $R_LIBS_USER
 
-
+coverage:
+  stage: test
+  allow_failure: true
+  dependencies:
+    - R-release
+  when: on_success
+  cache:
+    key: release-cache
+    paths:
+      - $R_LIBS_USER
+    policy: pull
+  only:
+    - develop
+    - master
+  before_script:
+    ## Add R_LIBS_USER to libpaths.
+    - echo '.libPaths("'${R_LIBS_USER}'")' > .Rprofile
+  script:
+    - Rscript -e 'covr::package_coverage(line_exclusions = "R/fitTDAsreml.R", function_exclusions = c("extractAsreml", "createReport"))'
+  coverage: '/Coverage:\s*(\d+.\d+\%)/'
+  artifacts:
+    when: always
+    paths:
+      - public
+    expire_in: '1 month'
