--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -1,8 +1,8 @@
 Package: statgenSTA
 Type: Package
 Title: Single Trial Analysis (STA) of Field Trials
-Version: 1.0.1
-Date: 2020-01-07
+Version: 1.0.2
+Date: 2020-01-09
 Authors@R: c(person(given = "Bart-Jan", 
                     family = "van Rossum", 
                     email = "bart-jan.vanrossum@wur.nl", 
@@ -47,14 +47,13 @@ Authors@R: c(person(given = "Bart-Jan",
                     role = "ctb",
                     comment = c(ORCID = "0000-0001-6030-3933"))
             )
-Description: The statgen packages, developed by Biometris, are developed to 
-    streamline the analysis of typical plant breeding experiments, including 
-    both phenotypic analysis of field trials and genotype-by-environment 
-    analysis. statgenSTA can be used for phenotypic analysis of field trials 
-    using spatial models. Some functions have been created to be used in 
-    conjunction with the R package 'asreml' for the 'ASReml' software, which 
-    can be obtained upon purchase from 'VSN' international 
-    (<http://www.vsni.co.uk/software/asreml-r>).
+Description: Phenotypic analysis of field trials using mixed models with and 
+    without spatial components. One of a series of statistical genetic packages 
+    for streamlining the analysis of typical plant breeding experiments developed
+    by Biometris.
+    Some functions have been created to be used in conjunction with the R 
+    package 'asreml' for the 'ASReml' software, which can be obtained upon 
+    purchase from 'VSN' international (<http://www.vsni.co.uk/software/asreml-r>). 
 License: GPL
 Encoding: UTF-8
 LazyData: true
