--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -15,6 +15,7 @@ before_script:
   - echo 'Sys.setenv(NOT_CRAN="true")' >> .Rprofile
   ## Make sure pdflatex is on the system path.
   - echo 'tinytex:::tweak_path()' >> .Rprofile
+  - echo 'tinytex:::tlmgr_install("setspace")' >> .Rprofile
 
 R-release:
   stage: build
