--- a/NAMESPACE
+++ b/NAMESPACE
@@ -23,6 +23,8 @@ import(ggplot2)
 import(stats)
 importFrom(SpATS,predict.SpATS)
 importFrom(grDevices,colorRampPalette)
+importFrom(grDevices,hcl.colors)
+importFrom(grDevices,hcl.pals)
 importFrom(grDevices,topo.colors)
 importFrom(graphics,plot)
 importFrom(utils,capture.output)
