Added robustness to correlation plot of TD objects. (Fixes #27)

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -28,6 +28,7 @@ importFrom(grDevices,hcl.pals)
 importFrom(grDevices,topo.colors)
 importFrom(graphics,plot)
 importFrom(utils,capture.output)
+importFrom(utils,combn)
 importFrom(utils,hasName)
 importFrom(utils,packageVersion)
 importFrom(xtable,xtable)
