Updated required package version for scales

--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -22,7 +22,7 @@ Authors@R: c(person(given = "Bart-Jan",
                     family = "Bustos-Korts",
                     role = "ctb",
                     comment = c(ORCID = "0000-0003-3827-6726")),
-             person(given = "Emilie", 
+             person(given = "Emilie J.", 
                     family = "Millet",
                     role = "ctb",
                     comment = c(ORCID = "0000-0002-2913-4892")),
@@ -69,7 +69,7 @@ Imports:
     mapproj,
     maps,
     qtl,
-    scales,
+    scales (>= 1.1.0),
     SpATS (>= 1.0-10),
     xtable
 Suggests: asreml(>= 3.0),
