Added pkgdown site to DESCRIPTION

--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -78,5 +78,5 @@ Suggests: asreml(>= 3.0),
     tibble
 SystemRequirements: pdflatex
 VignetteBuilder: knitr
-URL: https://github.com/Biometris/statgenSTA/
+URL: https://biometris.github.io/statgenSTA/index.html, https://github.com/Biometris/statgenSTA/
 BugReports: https://github.com/Biometris/statgenSTA/issues
