--- a/.github/workflows/check.yml
+++ b/.github/workflows/check.yml
@@ -64,12 +64,13 @@ jobs:
       - name: Install dependencies
         run: |
           remotes::install_deps(dependencies = NA)
-          remotes::install_cran("rcmdcheck")
+          remotes::install_cran(c("rcmdcheck", "rmarkdown"))
         shell: Rscript {0}
 
       - name: Check
         env:
           _R_CHECK_CRAN_INCOMING_REMOTE_: false
+          _R_CHECK_FORCE_SUGGESTS_: false
         run: rcmdcheck::rcmdcheck(args = c("--no-manual", "--as-cran"), error_on = "warning", check_dir = "check")
         shell: Rscript {0}
 
