--- a/.github/workflows/check.yml
+++ b/.github/workflows/check.yml
@@ -71,6 +71,7 @@ jobs:
         env:
           _R_CHECK_CRAN_INCOMING_REMOTE_: false
           _R_CHECK_FORCE_SUGGESTS_: false
+          _R_CHECK_DONTTEST_EXAMPLES_: false
         run: rcmdcheck::rcmdcheck(args = c("--no-manual", "--as-cran"), error_on = "warning", check_dir = "check")
         shell: Rscript {0}
 
