--- a/.github/workflows/check.yml
+++ b/.github/workflows/check.yml
@@ -72,6 +72,7 @@ jobs:
           _R_CHECK_CRAN_INCOMING_REMOTE_: false
           _R_CHECK_FORCE_SUGGESTS_: false
           _R_CHECK_DONTTEST_EXAMPLES_: false
+          _NOT_CRAN_: false
         run: rcmdcheck::rcmdcheck(args = c("--no-manual", "--as-cran"), error_on = "warning", check_dir = "check")
         shell: Rscript {0}
 
