--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -58,6 +58,7 @@ License: GPL
 Encoding: UTF-8
 LazyData: true
 RoxygenNote: 7.1.1
+Roxygen: list(markdown = TRUE)
 Depends: R (>= 3.3)
 Imports: 
     emmeans,
