--- a/.github/workflows/test-coverage.yaml
+++ b/.github/workflows/test-coverage.yaml
@@ -40,9 +40,9 @@ jobs:
         run: |
           install.packages(c("remotes"))
           remotes::install_deps(dependencies = NA)
-          remotes::install_cran("covr")
+          remotes::install_cran(c("covr", "testthat"))
         shell: Rscript {0}
 
       - name: Test coverage
-        run: covr::codecov(function_exclusions = c("extract", "extractAsreml", "extractSpATS", "extractLme4", "createExtract", "as.data.frame.extract"))
+        run: covr::codecov()
         shell: Rscript {0}
