--- a/_pkgdown.yml
+++ b/_pkgdown.yml
@@ -22,7 +22,9 @@ navbar:
           href: https://biometris.github.io/statgenGxE
         - text: "statgenGWAS"
           href: https://biometris.github.io/statgenGWAS
-    - icon: fa-github fa-lg
+        - text: "statgenHTP"
+          href: https://biometris.github.io/statgenHTP
+    - icon: fa-github fa-lg fab
       text: "github"
       href: https://github.com/Biometris/statgenSTA
 
