--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -11,10 +11,11 @@ before_script:
   - apt-get update
   - apt-get install -y --no-install-recommends ${APT_PKGS}
   - apt-get install -y --no-install-recommends qpdf pandoc pandoc-citeproc
-  - export PATH="/usr/local/lib/R/site-library/littler/examples/:${PATH};$HOME/bin;~/bin"
+  - export PATH="/usr/local/lib/R/site-library/littler/examples/:${PATH}"
   - echo "options(Ncpus = $(nproc --all))" >> /usr/local/lib/R/etc/Rprofile.site
   - install2.r devtools tinytex
-  - r -e 'devtools::install_dev_deps()'
+  - /opt/tinytex/bin/*/tlmgr path add
+  - r -e 'devtools::install_dev_deps()'  
   - r -e 'tinytex::install_tinytex(); tinytex::tinytex_root()'
 
 r-release:
