--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -14,8 +14,17 @@ before_script:
   - export PATH="/usr/local/lib/R/site-library/littler/examples/:${PATH}"
   - echo "options(Ncpus = $(nproc --all))" >> /usr/local/lib/R/etc/Rprofile.site
   - install2.r devtools
-  - wget -qO- "https://yihui.org/tinytex/install-unx.sh" \ | sh -s - --admin --no-path
-  - sudo ~/.TinyTeX/bin/*/tlmgr path add  
+  - RUN wget -qO- \
+    "https://github.com/yihui/tinytex/raw/master/tools/install-unx.sh" | \
+    sh -s - --admin --no-path \
+    && mv ~/.TinyTeX /opt/TinyTeX \
+    && /opt/TinyTeX/bin/*/tlmgr path add \
+    && tlmgr install metafont mfware inconsolata tex ae parskip listings \
+    && tlmgr path add \
+    && Rscript -e "source('https://install-github.me/yihui/tinytex'); tinytex::r_texmf()" \
+    && chown -R root:staff /opt/TinyTeX \
+    && chmod -R g+w /opt/TinyTeX \
+    && chmod -R g+wx /opt/TinyTeX/bin \
   - r -e 'devtools::install_dev_deps()'
 
 r-release:
