--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -16,7 +16,7 @@ before_script:
   - install2.r devtools
   - wget -qO- \
     "https://github.com/yihui/tinytex/tree/main/tools/install-unx.sh" | \
-    sh -s - --admin --no-path \
+    /usr/bin/sh -s - --admin --no-path \
     && mv ~/.TinyTeX /opt/TinyTeX \
     && /opt/TinyTeX/bin/*/tlmgr path add \
     && tlmgr install metafont mfware inconsolata tex ae parskip listings \
