Updated link to asreml

--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -55,7 +55,7 @@ Description: Phenotypic analysis of field trials using mixed models with and
     by Biometris.    
     Some functions have been created to be used in conjunction with the R 
     package 'asreml' for the 'ASReml' software, which can be obtained upon 
-    purchase from 'VSN' international (<https://www.vsni.co.uk/software/asreml-r>). 
+    purchase from 'VSN' international (<https://vsni.co.uk/software/asreml-r>). 
 License: GPL
 Encoding: UTF-8
 LazyData: true
