Updated github actions

--- a/.github/workflows/test-coverage.yaml
+++ b/.github/workflows/test-coverage.yaml
@@ -21,7 +21,8 @@ jobs:
 
       - uses: r-lib/actions/setup-r-dependencies@v2
         with:
-          extra-packages: any::covr, package=asreml?ignore
+          dependencies: '"hard"'
+          extra-packages: any::covr
           needs: coverage
 
       - name: Test coverage
