--- a/.github/workflows/pkgdown.yaml
+++ b/.github/workflows/pkgdown.yaml
@@ -23,7 +23,8 @@ jobs:
 
       - uses: r-lib/actions/setup-r-dependencies@v2
         with:
-          extra-packages: any::pkgdown, package=asreml?ignore
+          dependencies: '"hard"'
+          extra-packages: any::pkgdown
           needs: website
 
       - name: Deploy package
