--- a/NAMESPACE
+++ b/NAMESPACE
@@ -25,6 +25,7 @@ importFrom(SpATS,predict.SpATS)
 importFrom(grDevices,colorRampPalette)
 importFrom(grDevices,topo.colors)
 importFrom(graphics,plot)
+importFrom(rlang,.data)
 importFrom(utils,capture.output)
 importFrom(utils,combn)
 importFrom(utils,hasName)
