--- a/_pkgdown.yml
+++ b/_pkgdown.yml
@@ -29,6 +29,8 @@ navbar:
           href: https://biometris.github.io/statgenHTP
         - text: "statgenIBD"
           href: https://biometris.github.io/statgenIBD
+        - text: "statgenMPP"
+          href: https://biometris.github.io/statgenMPP
         - text: "LMMsolver"
           href: https://biometris.github.io/LMMsolver
     - icon: fa-github fa-lg fab
