--- a/.github/workflows/check.yaml
+++ b/.github/workflows/check.yaml
@@ -20,10 +20,11 @@ jobs:
       fail-fast: false
       matrix:
         config:
+          - {os: macos-latest,   r: 'release'}
           - {os: windows-latest, r: 'release'}
-          - {os: macOS-latest, r: 'release'}
-          - {os: ubuntu-latest, r: 'release'}
-          - {os: ubuntu-18.04, r: 'devel', http-user-agent: 'release'}
+          - {os: ubuntu-latest,   r: 'devel', http-user-agent: 'release'}
+          - {os: ubuntu-latest,   r: 'release'}
+          - {os: ubuntu-latest,   r: 'oldrel-1'}
 
     env:
       GITHUB_PAT: ${{ secrets.GITHUB_TOKEN }}
@@ -31,7 +32,7 @@ jobs:
       R_CHECK_FORCE_SUGGESTS: false
 
     steps:
-      - uses: actions/checkout@v2
+      - uses: actions/checkout@v3
 
       - uses: r-lib/actions/setup-pandoc@v2
 
@@ -50,3 +51,5 @@ jobs:
           extra-packages: any::rcmdcheck, any::rmarkdown, any::testthat
 
       - uses: r-lib/actions/check-r-package@v2
+        with:
+          upload-snapshots: true
